addded duration needs to be modified